<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtInputCityName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_city_name"
        android:inputType="textPersonName"
        android:paddingStart="0dp"
        android:paddingEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGetWeatherAtMyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickBtnOpenWeatherAtMyLocation"
        android:text="@string/get_at_my_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputCityName" />

    <ImageView
        android:id="@+id/imgSuggestion1"
        android:layout_width="376dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/city_suggestion_1"
        android:onClick="onClickCitySuggestion1"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetWeatherAtMyLocation"
        app:srcCompat="@drawable/helsinki"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgSuggestion3"
        android:layout_width="376dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/city_suggestion_3"
        android:onClick="onClickCitySuggestion3"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSuggestion2"
        app:srcCompat="@drawable/tampere"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imgSuggestion2"
        android:layout_width="376dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/city_suggestion_2"
        android:onClick="onClickCitySuggestion2"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSuggestion1"
        app:srcCompat="@drawable/hochiminhcity"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnSearchByCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:onClick="onClickBtnSearchWeatherByCityName"
        android:text="@string/btn_search_by_city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>